# snomcontrol

./: .appveyor.yml  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CODING.md  README.md  snomcontrol.pro
data/: INSTALL.md  Install.bat  excludes.txt  qtcreator-editor-style.xml  snomcontrol-ubunt1604.desktop  snomcontrol.desktop  snomcontrol.reg
icons/: snomcontrol.qrc
resources/: snomcontrol.qrc
scripts/: build.sh
src/: CMakeLists.txt  buttons.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.ballessay.snomcontrol.desktop  requesthandler.cpp  requesthandler.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  src.pri  webwidget.cpp  webwidget.h  webwidget.ui
